--- a/index.html
+++ b/index.html
@@ -1,17 +1,74 @@
-<html>
-  <head></head>
-  <body>
+  <!doctype html>
+  <head>
+    <title>Button Corp</title>
+  </head>
+  <body onload="evalCookie();">
     <h1> Welcome to ButtonCorp </h1>
-
     <p>
-    <button id="button" onclick="button_click()">You get $100.</button>
-
+      <button id="button" onclick="buttonClick()">You get $100.</button>
     </p>
   </body>
-
   <script>
-    function button_click() {
+    function buttonClick() {
+      let timestamp = 1730787645;
+      formatChange();
+      setCookie(timestamp, "true",1);
+      fetch("http://api.buttoncorp.org/press/" + getCookie("uuid") + "/" + timestamp);
+      console.log("A new player has played.");
+  }
+
+    function formatChange() {
       document.getElementById("button").style.color = "red";
+      
+
+      // mister owen do not touch this below
+      document.getElementById("button").disabled = true;
     }
+
+    function setCookie(cname, cvalue, cdays) {
+      const d = new Date();
+      d.setTime(d.getTime() + (cdays * 24 * 60 * 60 * 1000));
+      let expires = "expires=" + d.toUTCString();
+      document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+    }
+
+    function getCookie(cname) {
+      let name = cname + "=";
+      let decodedCookie = decodeURIComponent(document.cookie);
+      let ca = decodedCookie.split(';');
+      for (let i = 0; i < ca.length; i++) {
+        let c = ca[i];
+        while (c.charAt(0) == ' ') {
+          c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+          return c.substring(name.length, c.length);
+        }
+      }
+      return "";
+    }
+
+    function evalCookie() {
+      let timestamp = 1730787645;
+      let cookie = getCookie(timestamp);
+      if (cookie != "") {
+        formatChange();
+      } else {
+        notifyLoad(timestamp);
+      }
+
+      let uuid = getCookie("uuid");
+      if (uuid == "") {
+        const id = window.crypto.randomUUID();
+        setCookie("uuid", id, 365);
+      }
+    }
+
+    function notifyLoad(timestamp) {
+      setCookie(timestamp, false, 365);
+      fetch("http://api.buttoncorp.org/open/" + getCookie("uuid") + "/" + timestamp);
+      console.log("A new player has entered.");
+    }
+    
   </script>
-</html>
+  </html>
