--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body onload="evalCookie();">
     <h1> Welcome to ButtonCorp </h1>
     <p>
-      <button id="button" onclick="buttonClick()">You get $100.</button>
+    <button id="button" onclick="buttonClick()">You get a pet cat...<br>but a squirrel becomes sentient. It doesn't know who you are, but if it ever sees you, it will attempt to end your life.</button>
     </p>
   </body>
   <script>
