--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       let timestamp = 1730787645;
       formatChange();
       setCookie(timestamp, "true",1);
-      fetch("http://api.buttoncorp.org/press/" + getCookie("uuid") + "/" + timestamp);
+      fetch("https://api.buttoncorp.org/press/" + getCookie("uuid") + "/" + timestamp);
       console.log("A new player has played.");
   }
 
@@ -66,7 +66,7 @@
 
     function notifyLoad(timestamp) {
       setCookie(timestamp, false, 365);
-      fetch("http://api.buttoncorp.org/open/" + getCookie("uuid") + "/" + timestamp);
+      fetch("https://api.buttoncorp.org/open/" + getCookie("uuid") + "/" + timestamp);
       console.log("A new player has entered.");
     }
     
