Updated the look of the website a lot.
I FUCKING COOKED

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <link rel="stylesheet" href="./styles.css"/>
   </head>
   <body onload="evalCookie();">
+  <div class="topnav">
+    <a class="active" href="index.html">Daily Button</a>
+    <a href="about.html">About Us</a>
+    <a href="mailto:contact@buttoncorp.org">Contact</a>
+  </div>
   <div class="main-content">
-    <h1> Today's button </h1>
+    <h1> Button of the Day </h1>
     <p>
       You get a pet cat...<br>but a squirrel becomes sentient. It doesn't know who you are, but if it ever sees you, it will attempt to end your life.
     </p>
-    <button class="button" onclick="buttonClick()">Press me!</button>
+    <button class="button" onclick="buttonClick()">Button</button>
   </div>
   </body>
   
