Added logo to tab and topnav

--- a/about.html
+++ b/about.html
@@ -2,12 +2,16 @@
   <head>
     <title>Button Corp</title>
     <link rel="stylesheet" href="./styles.css"/>
+    <link rel="icon" href="logo.png">
   </head>
   <body>
   <div class="topnav">
-    <a href="index.html">Daily Button</a>
-    <a class="active" href="about.html">About Us</a>
-    <a href="mailto:contact@buttoncorp.org">Contact</a>
+    <img style="width:45px;height:45px;" src="DarkLogo.png">
+    <ul>
+      <a href="/">Daily Button</a>
+      <a class="active" href="about.html">About Us</a>
+      <a href="mailto:contact@buttoncorp.org">Contact</a>
+    </ul>
   </div>
   <div class="about-content">
     <h1> Button Corp. </h1>
