--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
   <head>
     <title>Button Corp</title>
     <link rel="stylesheet" href="./styles.css"/>
+    <link rel="icon" href="logo.png">
   </head>
   <body onload="evalCookie();">
-  <div class="topnav">
-    <a class="active" href="index.html">Daily Button</a>
-    <a href="about.html">About Us</a>
-    <a href="mailto:contact@buttoncorp.org">Contact</a>
+   <div class="topnav">
+    <img style="width:45px;height:45px;" src="DarkLogo.png">
+    <ul>
+      <a class="active" href="/">Daily Button</a>
+      <a href="about.html">About Us</a>
+      <a href="mailto:contact@buttoncorp.org">Contact</a>
+    </ul>
   </div>
   <div class="main-content">
     <h1> Button of the Day </h1>
     <p>
-      You get a pet cat...<br>but a squirrel becomes sentient. It doesn't know who you are, but if it ever sees you, it will attempt to end your life.
+      You get to pet a cat...<br>but a random squirrel somewhere becomes sentient. It doesn't know who you are, but if it ever sees you, it will attempt to end your life.
     </p>
     <button class="button" onclick="buttonClick()">Button</button>
   </div>
