--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <img style="width:45px;height:45px;" src="DarkLogo.png">
     <ul>
       <a href="/">Daily Button</a>
-      <a class="active" href="about.html">About Us</a>
+      <a class="active" href="about">About Us</a>
       <a href="mailto:contact@buttoncorp.org">Contact</a>
     </ul>
   </div>
