--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img style="width:45px;height:45px;" src="DarkLogo.png">
     <ul>
       <a class="active" href="/">Daily Button</a>
-      <a href="about.html">About Us</a>
+      <a href="about">About Us</a>
       <a href="mailto:contact@buttoncorp.org">Contact</a>
     </ul>
   </div>
