--- a/about.html
+++ b/about.html
@@ -15,6 +15,6 @@
   </div>
   <div class="about-content">
     <h1> Button Corp. </h1>
-    <p>Here at Button Corp, our mission statement is to strive to bring innovation to this industry. That way we can all work together on creating a brighter tomorrow. We would like to extend our hand and invite you to experience the difference today.</p>
+    <p>Here at Button Corp, our mission statement is to strive to bring innovation to this industry. That way we can all work together on creating a brighter tomorrow. We would like to extend our hand and invite you to experience the difference today as we define the edge.</p>
   </div>
   </body>
