--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="main-content">
     <h1> Button of the Day </h1>
     <p>
-      You get to pet a cat...<br>but a random squirrel somewhere becomes sentient. It doesn't know who you are, but if it ever sees you, it will attempt to end your life.
+      You get to eat a large pizza but...<br>one day, a large pizza will eat you.
     </p>
     <button class="button" onclick="buttonClick()">Button</button>
   </div>
@@ -63,7 +63,7 @@
       return "";
     }
     function getTimestamp() {
-      return 1730922959;
+      return 1730958365;
     }
 
     function evalCookie() {
