--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <a class="active" href="/">Daily Button</a>
       <a href="about">About Us</a>
+      <a href="slots">Slots</a>
       <a href="mailto:contact@buttoncorp.org">Contact</a>
     </ul>
   </div>
