--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <ul>
       <a href="/">Daily Button</a>
       <a class="active" href="about">About Us</a>
+      <a href="Slots">Slots</a>
       <a href="mailto:contact@buttoncorp.org">Contact</a>
     </ul>
   </div>
