--- a/slots.html
+++ b/slots.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-US" class="slotsfull">
 <head>
     <title>Button Corp</title>
     <link rel="stylesheet" href="./styles.css"/>
     <link rel="icon" href="logo.png">
   </head>
-  <body>
+  <body class="slotsfull">
    	<div class="topnav">
     <img style="width:45px;height:45px;" src="DarkLogo.png">
     <ul>
@@ -28,7 +27,6 @@
   </div>
   </body>
 </div>
-</Html>
 <div>
 		<script>
 			var Spin = new Audio("Expand 2.mp3");
