--- a/slots.html
+++ b/slots.html
@@ -13,7 +13,7 @@
         <ul>
             <a href="/">Daily Button</a>
             <a href="about">About Us</a>
-            <a class="active" href="/">Slots</a>
+            <a class="active" href="slots">Slots</a>
             <a href="mailto:contact@buttoncorp.org">Contact</a>
         </ul>
   </div>
