--- a/slots.html
+++ b/slots.html
@@ -3,7 +3,7 @@
     <title>Button Corp</title>
     <link rel="stylesheet" href="./styles.css"/>
     <link rel="icon" href="logo.png">
-    <script src="slots.js"></script>
+    <script src="button.js"></script>
   </head>
   <body class="slotsfull">
     <div class="topnav">
