--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 			<a class="active" href="about">About Us</a>
 			<a href="slots">Slots</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
+			<a class="ButtonBucksCounter"></a>
 		</ul>
 	</div>
 	<div class="about-content">
