--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<a href="about">About Us</a>
 			<a href="slots">Slots</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
+			<a class="ButtonBucksCounter"></a>
 		</ul>
 	</div>
 	<div class="main-content">
