Added Button Bucks

--- a/slots.html
+++ b/slots.html
@@ -3,7 +3,6 @@
 	<title>Button Corp</title>
 	<link rel="stylesheet" href="./styles.css"/>
 	<link rel="icon" href="logo.png">
-	<script src="button.js"></script>
 </head>
 <body class="slotsfull">
 	<div class="topnav">
@@ -13,7 +12,7 @@
 			<a href="about">About Us</a>
 			<a class="active" href="slots">Slots</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
-			<a class="ButtonBucksCounter"></a>
+			<a class="bucky"></a>
 		</ul>
 	</div>
 	<div class="slots-content">
@@ -68,3 +67,4 @@ window.addEventListener('load', function () {
 	}
 })
 </script>
+<script src="button.js"></script>
