--- a/about.html
+++ b/about.html
@@ -20,3 +20,4 @@
 		<p>Here at Button Corp, our mission statement is to strive to bring innovation to this industry. That way we can all work together on creating a brighter tomorrow. We would like to extend our hand and invite you to experience the difference today as we define the edge and expand our horizons.</p>
 	</div>
 </body>
+<script src="button.js"></script>
