Changed layout of top bar

--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
 		<img style="width:45px;height:45px;" src="DarkLogo.png">
 		<ul>
 			<a href="/">Daily Button</a>
-			<a class="active" href="about">About Us</a>
-			<a href="slots">Slots</a>
+			<a href="about">About Us</a>
+			<a class="active" href="slots">Slots</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
-			<a class="ButtonBucksCounter"></a>
 		</ul>
+		<div><a class="bucky"></a></div>
 	</div>
 	<div class="about-content">
 		<h1> Button Corp. </h1>
