--- a/slots.html
+++ b/slots.html
@@ -12,8 +12,8 @@
 			<a href="about">About Us</a>
 			<a class="active" href="slots">Slots</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
-			<a class="bucky"></a>
 		</ul>
+		<div><a class="bucky"></a></div>
 	</div>
 	<div class="slots-content">
 		<img src="Slots Logo.png">
