--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<div class="topnav">
 		<img style="width:45px;height:45px;" src="DarkLogo.png">
 		<ul>
-			<a class="active" href="/">Daily Button</a>
+			<a href="/">Daily Button</a>
 			<a href="about">About Us</a>
-			<a href="slots">Slots</a>
+			<a class="active" href="slots">Slots</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
-			<a class="ButtonBucksCounter"></a>
 		</ul>
+		<div><a class="bucky"></a></div>
 	</div>
 	<div class="main-content">
 		<h1> Button of the Day </h1>
