--- a/about.html
+++ b/about.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 	<div class="topnav">
-		<img style="width:45px;height:45px;" src="DarkLogo.png">
+		<div class="topimagediv"><img style="width:45px;height:45px;" src="DarkLogo.png"></div>
 		<ul>
 			<a href="/">Daily Button</a>
-			<a href="about">About Us</a>
-			<a class="active" href="slots">Slots</a>
+			<a class="active" href="about">About Us</a>
+			<a href="slots">Slots</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
 		</ul>
 		<div><a class="bucky"></a></div>
