--- a/slots.html
+++ b/slots.html
@@ -6,7 +6,7 @@
 </head>
 <body class="slotsfull">
 	<div class="topnav">
-		<img style="width:45px;height:45px;" src="DarkLogo.png">
+		<div class="topimagediv"><img style="width:45px;height:45px;" src="DarkLogo.png"></div>
 		<ul>
 			<a href="/">Daily Button</a>
 			<a href="about">About Us</a>
