--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="main-content">
 		<h1> Button of the Day </h1>
 		<p>
-			You gain the ability to fly planes but...<br>Jaywalking is now a felony
+			A knife you own will become so sharp it can cut through anything, but...<br>Cutting through the fabric of the universe will release dangerous creatures which might destroy humanity
 		</p>
 		<button class="button" onclick="buttonClick()">Button</button>
 	</div>
