--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Button Corp</title>
 	<link rel="stylesheet" href="./styles.css"/>
-	<link rel="icon" href="logo.png">
+	<link rel="icon" href="Icon.ico">
 </head>
 <body onload="evalCookie();">
 	<div class="topnav">
