Added item shop

--- a/slots.html
+++ b/slots.html
@@ -11,6 +11,7 @@
 			<a href="/">Daily Button</a>
 			<a href="about">About Us</a>
 			<a class="active" href="slots">Slots</a>
+			<a href="shop">Shop</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
 		</ul>
 		<div><a class="bucky"></a></div>
@@ -32,6 +33,7 @@
 	</div>
 </body>
 <script>
+var Music = new Audio("Slots.wav");
 window.addEventListener('load', function () {
 	// Does the music and sound sliders
 	// - Owen
