--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<a class="active" href="/">Daily Button</a>
 			<a href="about">About Us</a>
 			<a href="slots">Slots</a>
+			<a href="shop">Shop</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
 		</ul>
 		<div><a class="bucky"></a></div>
