--- a/shop.html
+++ b/shop.html
@@ -82,4 +82,4 @@ window.addEventListener('load', function () {
 })
 </script>
 <script src="button.js"></script>
-<script>updateShop()</script>script>
+<script>updateShop()</script>
