Fixed items in shop

--- a/shop.html
+++ b/shop.html
@@ -25,8 +25,8 @@
 			<div class="item">
 				<img class="Item: Autoslots" onclick="buyItem('Autoslots')" src="Items/Autoslots.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
-					<h1> ($100) Autoslots </h1>
-					<p> When you play the slots, they'll automatically keep playing. Lasts 24 hours. </p>
+					<h1> ($15) Autoslots </h1>
+					<p> For 10 minutes, make slots to keep playing automatically. </p>
 				</span>
 			</div>
 			<div class="item">
