--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
 				<img class="Item: Autoslots" onclick="buyItem('Autoslots')" src="Items/Autoslots.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($15) Autoslots </h1>
-					<p> For 10 minutes, make slots to keep playing automatically. </p>
+					<p> Make Button Corp Slots to keep playing automatically for 10 minutes. </p>
 				</span>
 			</div>
 			<div class="item">
