Changed purchase sound, added Peepo2X item

--- a/slots.html
+++ b/slots.html
@@ -48,12 +48,14 @@ window.addEventListener('load', function () {
 		Click.volume = this.value;
 		UnclickSound.volume = this.value;
 		Win.volume = this.value;
+		Cash.volume = sfxSlider.value;
 	});
 	Music.volume = musicSlider.value;
 	Spin.volume = sfxSlider.value;
 	Click.volume = sfxSlider.value;
 	UnclickSound.volume = sfxSlider.value;
 	Win.volume = sfxSlider.value;
+	Cash.volume = sfxSlider.value;
 
 	document.body.onkeyup = function (e) {
 		// Makes the space button also roll the slots
