--- a/shop.html
+++ b/shop.html
@@ -21,6 +21,7 @@
 	</div>
 	<div class="shop-content" hidden=true>
 		<h1> Item Shop </h>
+		<h2> Slots </h2>
 		<div class="shopbox">
 			<div class="item">
 				<img class="Item: Autoslots" onclick="buyItem('Autoslots')" src="Items/Autoslots.png" style="width:15vh;height:15vh;">
@@ -29,6 +30,16 @@
 					<p> Make Button Corp Slots keep playing automatically for 10 minutes. </p>
 				</span>
 			</div>
+			<div class="item">
+				<img class="Item: Peepo2X" onclick="buyItem('Peepo2X')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
+				<span class="tooltiptext">
+					<h1> ($10) Peepo2X </h1>
+					<p> Doubles your chance of rolling a Peepo for 10 minutes. </p>
+				</span>
+			</div>
+		</div>
+		<h2> Misc </h2>
+		<div class="shopbox">
 			<div class="item">
 				<img class="Item: Burn" onclick="buyItem('Burn')" src="Items/Burn.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
@@ -60,12 +71,14 @@ window.addEventListener('load', function () {
 		Click.volume = this.value;
 		UnclickSound.volume = this.value;
 		Win.volume = this.value;
+		Cash.volume = sfxSlider.value;
 	});
 	Music.volume = musicSlider.value;
 	Spin.volume = sfxSlider.value;
 	Click.volume = sfxSlider.value;
 	UnclickSound.volume = sfxSlider.value;
 	Win.volume = sfxSlider.value;
+	Cash.volume = sfxSlider.value;
 
 	document.body.onkeyup = function (e) {
 		// Makes the space button also roll the slots
