Hopefully fixed peepo2x

--- a/shop.html
+++ b/shop.html
@@ -31,7 +31,7 @@
 				</span>
 			</div>
 			<div class="item">
-				<img class="Item: Peepo2X" onclick="buyItem('Peepo2X')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
+				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($10) Peepo2X </h1>
 					<p> Doubles your chance of rolling a Peepo for 10 minutes. </p>
