--- a/shop.html
+++ b/shop.html
@@ -56,7 +56,7 @@
 	</div>
 </body>
 <script>
-var Music = new Audio("Welcome to the Shop.wav");
+var Music = new Audio("Welcome to the Shop.mp3");
 window.addEventListener('load', function () {
 	// Does the music and sound sliders
 	// - Owen
