--- a/slots.html
+++ b/slots.html
@@ -33,7 +33,7 @@
 	</div>
 </body>
 <script>
-var Music = new Audio("Slots.wav");
+var Music = new Audio("Slots.mp3");
 window.addEventListener('load', function () {
 	// Does the music and sound sliders
 	// - Owen
