--- a/jungle.html
+++ b/jungle.html
@@ -8,21 +8,22 @@
 	<div class="topnav">
 		<div class="topimagediv"><img style="width:45px;height:45px;" src="DarkLogo.png"></div>
 		<ul>
-			<a class="active" href="/">Daily Button</a>
+			<a href="/">Daily Button</a>
 			<a href="about">About Us</a>
 			<a href="slots">Slots</a>
 			<a href="shop">Shop</a>
-			<a href="jungle">Jungle</a>
+			<a class="active" href="jungle">Jungle</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
 		</ul>
 		<div><a class="bucky"></a></div>
 	</div>
 	<div class="main-content">
-		<h1> Button of the Day </h1>
+		<h1> Camp </h1>
 		<p>
-			A knife you own will become so sharp it can cut through anything, but...<br>Cutting through the fabric of the universe will release dangerous creatures which might destroy humanity
+			After farming, come back to this page later.
 		</p>
-		<button class="button" onclick="buttonClick()">Button</button>
+		<button class="button" onclick="farmCamp()">Farm</button>
 	</div>
 </body>
 <script src="button.js"></script>
+<script>updateJungle()</script>
