--- a/shop.html
+++ b/shop.html
@@ -12,6 +12,7 @@
 			<a href="about">About Us</a>
 			<a href="slots">Slots</a>
 			<a class="active" href="shop">Shop</a>
+			<a href="jungle">Jungle</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
 		</ul>
 		<div><a class="bucky"></a></div>
@@ -21,7 +22,7 @@
 	</div>
 	<div class="shop-content" hidden=true>
 		<h1> Item Shop </h>
-		<h2> Slots </h2>
+		<h2> Weapon </h2>
 		<div class="shopbox">
 			<div class="item">
 				<img class="Item: Autoslots" onclick="buyItem('Autoslots')" src="Items/Autoslots.png" style="width:15vh;height:15vh;">
@@ -34,12 +35,29 @@
 				<img class="Item: Peepo" onclick="buyItem('Peepo')" src="Items/Peepo2X.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
 					<h1> ($125) Peepo2X </h1>
-					<p> Doubles your chance of rolling a Peepo for 10 minutes. </p>
+					<p> Double the number of Peepos on the slot . </p>
 				</span>
 			</div>
 		</div>
-		<h2> Misc </h2>
+		<h2> Spirit </h2>
 		<div class="shopbox">
+			<div class="item">
+				<img class="Item: Soul" onclick="buyItem('Soul')" src="Items/Soul.png" style="width:15vh;height:15vh;">
+				<span class="tooltiptext">
+					<h1> ($1) Soul </h1>
+					<p> A fragment of a soul nearly lost. Who knows where it's going? </p>
+				</span>
+			</div>
+		</div>
+		<h2> Vitality </h2>
+		<div class="shopbox">
+			<div class="item">
+				<img class="Item: Jungler" onclick="buyItem('Jungler')" src="Items/Jungler.png" style="width:15vh;height:15vh;">
+				<span class="tooltiptext">
+					<h1> ($20) Jungler </h1>
+					<p> Decreases jungle respawn time from 5 minutes to 3 minutes. Lasts 1 hour. </p>
+				</span>
+			</div>
 			<div class="item">
 				<img class="Item: Burn" onclick="buyItem('Burn')" src="Items/Burn.png" style="width:15vh;height:15vh;">
 				<span class="tooltiptext">
