--- a/slots.html
+++ b/slots.html
@@ -12,6 +12,7 @@
 			<a href="about">About Us</a>
 			<a class="active" href="slots">Slots</a>
 			<a href="shop">Shop</a>
+			<a href="jungle">Jungle</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
 		</ul>
 		<div><a class="bucky"></a></div>
