Fixed jungle maybe

--- a/shop.html
+++ b/shop.html
@@ -113,4 +113,8 @@ window.addEventListener('load', function () {
 })
 </script>
 <script src="button.js"></script>
-<script>updateShop()</script>
+<script>
+updateShop()
+Music.loop = true
+Music.volume = 0.5;
+</script>
