--- a/slots.html
+++ b/slots.html
@@ -71,5 +71,7 @@ window.addEventListener('load', function () {
 		}
 	}
 })
+Music.loop = true
+Music.volume = 0.5;
 </script>
 <script src="button.js"></script>
