--- a/jungle.html
+++ b/jungle.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="./styles.css"/>
 	<link rel="icon" href="Icon.ico">
 </head>
-<body onload="evalCookie();">
+<body>
 	<div class="topnav">
 		<div class="topimagediv"><img style="width:45px;height:45px;" src="DarkLogo.png"></div>
 		<ul>
