--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="main-content">
 		<h1> Button of the Day </h1>
 		<p>
-			A knife you own will become so sharp it can cut through anything, but...<br>Cutting through the fabric of the universe will release dangerous creatures which might destroy humanity
+			You get a million US dollars but...<br>All of your friends die
 		</p>
 		<button class="button" onclick="buttonClick()">Button</button>
 	</div>
