--- a/slots.html
+++ b/slots.html
@@ -13,6 +13,7 @@
 			<a class="active" href="slots">Slots</a>
 			<a href="shop">Shop</a>
 			<a href="jungle">Jungle</a>
+			<a href="news">News</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
 		</ul>
 		<div><a class="bucky"></a></div>
