--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <head>
 	<title>Button Corp</title>
 	<link rel="stylesheet" href="./styles.css"/>
@@ -13,6 +14,7 @@
 			<a href="slots">Slots</a>
 			<a href="shop">Shop</a>
 			<a href="jungle">Jungle</a>
+			<a href="news">News</a>
 			<a href="mailto:contact@buttoncorp.org">Contact</a>
 		</ul>
 		<div><a class="bucky"></a></div>
